--- a/NearBuyFE/package.json
+++ b/NearBuyFE/package.json
@@ -42,7 +42,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-location": "~18.1.5",
-    "expo-modules-core": "~2.4.0"
+    "expo-modules-core": "~2.4.0",
+    "expo-task-manager": "~13.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
