--- a/NearBuyFE/app.json
+++ b/NearBuyFE/app.json
@@ -4,7 +4,7 @@
     "slug": "NearBuyFE",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/nearbuy_icon.png",
     "scheme": "nearbuy",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
@@ -22,7 +22,7 @@
     "android": {
       "package": "com.mylo.nearbuy",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
+        "foregroundImage": "./assets/images/nearbuy_icon.png",
         "backgroundColor": "#ffffff"
       },
       "permissions": [
@@ -45,7 +45,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/icon.png",
+          "image": "./assets/images/nearbuy_icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
