--- a/NearBuyFE/android/app/src/main/AndroidManifest.xml
+++ b/NearBuyFE/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE_LOCATION"/>
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -30,7 +31,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="nearbuy"/>
-        <data android:scheme="exp+nearbuy"/>
+        <data android:scheme="exp+nearbuyfe"/>
       </intent-filter>
     </activity>
   </application>
